# degreeGuidance

./: .env.example  .gitignore  README.md  pyproject.toml  schema.sql  start-web.sh
alembic/: env.py
alembic/versions/: 093c47d4fb58_40_agent_configs.py  25d1beea7023_11_courses_name_cleanup.py  2ae50003b4ee_27_complete_arts_and_law_subjects.py  2ccafb3d723e_20_auth_events.py  2cd4dc5ac4d2_38_unmapped_cutoffs.py  30a60cdbaa9e_03_subjects.py  49cd0ba8b89d_09_courses.py  502c1148b533_10_course_markers.py  587fcc0e7d44_02_streams.py  5b7bc34e2628_30_seed_special_course_requirements.py  5eb5904bd867_29_tighten_subject_rules.py  5fcd67dbeceb_15_ingestion_runs_and_parse_errors.py  65a2d08989b1_16_add_missing_courses_from_2024_handbook.py  65a2d08989b1_16_add_missing_courses_from_2024_handbook.py.bak  66e1fd4b50a7_26_fix_cross_stream_eligibility_.py  6eeaa009958a_12_course_stream_eligibility.py  707b571ec8c2_18_eligibility_tables.py  70cacf08afcc_19_auth_foundation.py  77fc30fc852e_14_z_score_cutoffs.py  7a9673efd038_04_stream_subjects.py  7fa2c4d81b3e_42_ingestion_artifacts.py  87e1c889ddde_07_faculties.py  90c59d5e3d09_05_mediums.py  985e13967bd9_39_conversation_flagged.py  a02798da0bc2_08_special_provision_categories.py  (+19 more)
apps/api/: guards.py  (+4 more)
core/: config.py  db.py  ratelimit.py  security.py
docs/: ADMIN_HANDBOOK_PIPELINE_DESIGN.md  DATABASE_REFERENCE.md  HANDOFF_PROMPT_v2.md  HANDOFF_PROMPT_v2.md:Zone.Identifier  MASTERPLAN_v4.md  PHASE2_STUDENT_ADMIN_PLAN.md  PHASE9_NEW_COURSE_AGENT_PLAN.md  PROJECT_INTERNALS.md  W2_PROD_PARITY_RUNBOOK.md
ops/: docker-compose.yml
scripts/: apply_prod_migrations.py  backfill_course_facts_from_book.py  check_ecs_lookup.py  check_factsheet_coverage.py  create_admin.py  fix_catalog_streams_from_book.py  generate_factsheets.py  populate_career_tags.py
tests/: conftest.py
web/: .env.example  package-lock.json  package.json
(+312 files in other folders)
